--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 
 <body>
 
-  <input type="button" id="check" value="Check" />
+  <div style="text-align: center;">
+    <a class="start" href="#">
+      <img src="./include/images/logo.png" style="height:80vh;" /><br />
+      <span style="font-size: 15vh; font-weight: bold; font-family: Arial, Helvetica, sans-serif; display: inline-block; margin-top:0%;margin-top: -5%;">TOUCH ME</span>
+    </a>
+  </div>
 
-  <div id="loading">
-    <img src="./include/images/loading.svg" />
+  <div id="loading" style="display: none;">
+    <img src=" ./include/images/loading.svg" />
   </div>
 
   <script>
