--- a/index.html
+++ b/index.html
@@ -11,19 +11,34 @@
 <body>
 
   <div style="text-align: center;">
-    <a class="start" href="#">
-      <img src="./include/images/logo.png" style="height:80vh;" /><br />
-      <span style="font-size: 15vh; font-weight: bold; font-family: Arial, Helvetica, sans-serif; display: inline-block; margin-top:0%;margin-top: -5%;">TOUCH ME</span>
+    <a id="startPhotoBooth" href="#">
+      <img src="./include/images/logo.png" /><br />
+      <span>TOUCH ME</span>
     </a>
+  </div>
+
+  <div id="app">
+    <div id="step1">
+      <div>
+        <span id="text1">Ready?</span>
+        <span id="text2">3</span>
+        <span id="text3">2</span>
+        <span id="text4">1</span>
+        <span id="text5"><span id="arrow">&#8679;</span><br />Smile :)<br />&nbsp;</span>
+      </div>
+    </div>
+    <div id="step2"></div>
+    <div id="step3"></div>
   </div>
 
   <div id="loading" style="display: none;">
     <img src=" ./include/images/loading.svg" />
   </div>
 
-  <script>
-    require('./index.js');
-  </script>
+    <script>
+      require('./include/js/app.js');
+
+    </script>
 </body>
 
 </html>
