Take 3 frames; convert to Promise

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="app">
     <div id="step1">
       <div>
-        <span id="text1">Ready?</span>
+        <span id="text1"><span id="frameNumber">1</span><br />Ready?</span>
         <span id="text2">3</span>
         <span id="text3">2</span>
         <span id="text4">1</span>
