--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <div id="app">
     <div id="step1">
+      <div style="width:20%;"></div>
       <div>
         <span id="text1"><span id="frameNumber">1</span><br />Ready?</span>
         <span id="text2">3</span>
