Full cycle, new template

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         <span id="text3">2</span>
         <span id="text4">1</span>
         <span id="text5"><span id="arrow">&#8679;</span><br />Smile :)<br />&nbsp;</span>
+        <span id="text6">Printing ...</span>
       </div>
+    </div>
+    <div id="admin">
+      qwe
     </div>
     <div id="step2"></div>
     <div id="step3"></div>
