--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <div style="text-align: center;">
     <a id="startPhotoBooth" href="#">
-      <img src="./include/images/logo.png" /><br />
-      <span>TOUCH ME</span>
+      <img src="./include/images/logo-lex.jpg" style="max-width: 80%;" /><br />
+      <span>TOUCH&nbsp;ME</span>
     </a>
   </div>
 
