--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div style="text-align: center;">
     <a id="startPhotoBooth" href="#">
-      <img src="./include/images/logo-lex.jpg" style="max-width: 80%;" /><br />
+      <img src="./include/images/logo.png" style="max-width: 40%;" /><br />
       <span>TOUCH&nbsp;ME</span>
     </a>
   </div>
