--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div style="text-align: center;">
     <a id="startPhotoBooth" href="#">
       <img src="./include/images/logo.png" style="max-width: 40%;" /><br />
-      <span>TOUCH&nbsp;ME</span>
+      <span>TOUCH ME TO TAKE A PHOTO</span>
     </a>
   </div>
 
