Update packages and add camera icon

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div style="text-align: center;">
     <a id="startPhotoBooth" href="#">
-      <img src="./include/images/logo-blackfires.png" style="max-width: 40%;" /><br />
+      <img src="" style="max-width: 40%;" /><br />
       <span>TOUCH ME<br/>TO TAKE A PHOTO</span>
     </a>
   </div>
