--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <link type="text/css" rel="stylesheet" href="./include/css/main.css" />
   <link type="text/css" rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css" />
+
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'nonce-app-random-hash'; style-src 'self' 'unsafe-inline'">
 </head>
 
 <body>
@@ -82,7 +84,7 @@
     <div id="admin_dialog"></div>
   </div>
 
-  <script>
+  <script nonce="app-random-hash">
     require('./include/js/app.js');
   </script>
 </body>
